# bbk9588-emulator

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_NOTICE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  images.md  jz4740-qemu-remodel-plan.md  uboot-analysis.md
emu/: app.py  qemu_app.py
emu/core/: __init__.py  framebuffer.py
emu/qemu/: __init__.py  check_source_tree.py  ecc.py  ftl.py  nand_fs.py  nand_lock.py  nand_source.py  system.py
emu/web/: frontend.py  frontend_server.py  frontend_state.py  frontend_ws.py
packaging/: RELEASE_README.md  start-web.cmd  start-web.ps1
qemu/: README.md
qemu/overlay/: README.md
qemu/overlay/hw/audio/: jz4740_aic.c  meson.build
qemu/overlay/hw/block/: bbk9588_nand.c
qemu/overlay/hw/char/: jz4740_uart.c
qemu/overlay/hw/display/: bbk9588_host_bridge.c  bbk9588_panel.c  jz4740_lcd.c
qemu/overlay/hw/dma/: bbk9588_dma_bridge.c  jz4740_dmac.c
qemu/overlay/hw/gpio/: jz4740_gpio.c
qemu/overlay/hw/input/: bbk9588_host_input.c  jz4740_sadc.c
qemu/overlay/hw/intc/: jz4740_intc.c
qemu/overlay/hw/mem/: jz4740_ecc.c  jz4740_emc.c
qemu/overlay/hw/mips/: Kconfig  bbk9588.c  meson.build  mips_int.c
qemu/overlay/hw/misc/: bbk9588_diag.c  jz4740_cim.c  jz4740_cpm.c
qemu/overlay/hw/rtc/: jz4740_rtc.c
qemu/overlay/hw/sd/: jz4740_msc.c
qemu/overlay/hw/timer/: jz4740_tcu.c
qemu/overlay/hw/usb/: jz4740_udc.c
qemu/overlay/include/hw/audio/: jz4740_aic.h
qemu/overlay/include/hw/block/: bbk9588_nand.h
qemu/overlay/include/hw/char/: jz4740_uart.h
qemu/overlay/scripts/: symlink-install-tree.py
qemu/scripts/: build_qemu_windows.ps1  install_qemu_overlay.py
tests/: qemu_audio_wav.py  run_frontend_web_smoke.py  run_qemu_comparison_benchmark.py  run_qemu_system_probe.py  run_thunder_web_smoke.py  test_frontend_feedback.py  test_ftl.py  test_qemu_system.py
tools/: audit_ftl_nand.py  build_runtime_images.ps1  collect_qemu_runtime.ps1  inspect_combined_nand_fat.py  make_combined_nand.py  make_fat16_image.py  package_emulator.ps1  package_nand_release.py  stamp_ftl_oob.py  stamp_nand_ecc.py  validate_release_package.py
(+18 files in other folders)
