[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bbk9588-emulator"
version = "0.1.0"
description = "BBK 9588 emulator with a JZ4740 QEMU hardware model and local Web frontend"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "COPYING" }
dependencies = [
  "capstone>=5.0.0",
  "pyfatfs==1.1.0",
  "setuptools<81",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[project.scripts]
bbk9588-emulator = "emu.app:main"

[tool.setuptools.packages.find]
include = ["emu*"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
  "build",
  "qemu/overlay",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = [
  "E501",
  "E731",
  "F401",
  "F841",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "run_*_smoke.py"]
addopts = "-q"
